Fix file input overflowing on moblie.

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -49,7 +49,7 @@
 }
 
 .model-manager input[type="file"] {
-	flex: 1;
+    width: 100%;
 }
 
 .model-manager button,
@@ -235,6 +235,7 @@
 
 .model-manager [data-name="Download"] summary {
     padding: 16px;
+    word-wrap: break-word;
 }
 
 .model-manager [data-name="Download"] .download-settings {
